--- a/YTzeldalike/Assembly-CSharp.csproj
+++ b/YTzeldalike/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\CamMovement.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>/goinfre/bnkosi/Desktop/tut/zeldalike/YTzeldalike/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
